--- a/src/components/pages/contact/FormSection.scss
+++ b/src/components/pages/contact/FormSection.scss
@@ -87,7 +87,7 @@
 //Form styles mobile
 @media (max-width: 600px) {
     .formSectionContainer {
-        margin-top: 90px;
+        margin-block: 90px;
         display: flex;
         justify-content: center;
         align-items: center;
