fixing sizing issue

--- a/src/components/common/Footer.scss
+++ b/src/components/common/Footer.scss
@@ -122,6 +122,7 @@
 //Footer on mobile
 @media (max-width: 600px) {
     .footer {
+        margin-top: 70px;
         height: 80vh;
         padding-inline: 16px;
         .footerContainer {
