--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -3,7 +3,7 @@
 $brandColor: #3098f3;
 $secondaryBlue: #082c4e;
 $secondaryYellow: #ffcc00;
-$secondayWatermelon: #fe6571;
+$secondaryWatermelon: #fe6571;
 $secondayCream: #f2eae2;
 $neutralWhite: #ffffff;
 $neutralCloudy: #d9d9da;
@@ -14,7 +14,7 @@ $color-pallete: (
     brandColor: $brandColor,
     secondaryBlue: $secondaryBlue,
     secondaryYellow: $secondaryYellow,
-    secondayWatermelon: $secondayWatermelon,
+    secondaryWatermelon: $secondaryWatermelon,
     secondayCream: $secondayCream,
     neutralWhite: $neutralWhite,
     neutralCloudy: $neutralCloudy,
