--- a/src/components/common/Topbar.scss
+++ b/src/components/common/Topbar.scss
@@ -22,7 +22,9 @@
         justify-content: flex-start;
         align-items: center;
     }
-
+    .imgMobile {
+        display: none;
+    }
     .left,
     .right {
         display: flex;
@@ -42,21 +44,30 @@
     .topbarContainer {
         position: relative;
         height: 55px;
+        padding-block: 20px;
 
         &.navHidden {
             transform: none;
         }
         .topbar {
             justify-content: space-between;
+            padding-inline: 16px;
 
             .right {
                 flex-grow: 0;
             }
         }
+
+        img {
+            display: none;
+        }
+        .imgMobile {
+            display: block;
+        }
     }
     .hamburger {
-        width: 32px;
-        height: 25px;
+        width: 25px;
+        height: 20px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
