--- a/src/components/pages/contact/InfoExtra.scss
+++ b/src/components/pages/contact/InfoExtra.scss
@@ -149,7 +149,8 @@
 //Info extra mobile
 @media (max-width: 600px) {
     .infoExtraContainer {
-        margin-top: 150px;
+        margin-top: 90px;
+        padding-inline: 16px;
         height: 90vh;
         .infoExtra {
             flex-direction: column;
