--- a/src/components/common/Topbar.scss
+++ b/src/components/common/Topbar.scss
@@ -40,11 +40,14 @@
 }
 
 // Topbar on mobile
-@media (max-width: 600px) {
+@media (max-width: 1024px) {
     .topbarContainer {
-        position: relative;
+        position: fixed;
+        top: 0;
+        z-index: 300;
         height: 55px;
         padding-block: 20px;
+        transition: all 0.4s ease;
 
         &.navHidden {
             transform: none;
