--- a/src/components/common/Topbar.scss
+++ b/src/components/common/Topbar.scss
@@ -101,3 +101,11 @@
         }
     }
 }
+
+@media (min-width: 1442px) {
+    .topbarContainer {
+        .topbar {
+            padding-inline: 20%;
+        }
+    }
+}
