--- a/src/components/pages/contact/HeroSection.scss
+++ b/src/components/pages/contact/HeroSection.scss
@@ -40,3 +40,12 @@
         }
     }
 }
+
+@media (min-width: 1442px) {
+    .heroSectionContainer {
+        height: 57vh;
+        padding-inline: 16px;
+        .heroSection {
+        }
+    }
+}
