--- a/src/components/pages/contact/InfoExtra.scss
+++ b/src/components/pages/contact/InfoExtra.scss
@@ -157,3 +157,10 @@
         }
     }
 }
+
+@media (min-width: 1442px) {
+    .infoExtraContainer {
+        padding-inline: 20%;
+        margin-top: 0;
+    }
+}
