--- a/src/components/common/Footer.scss
+++ b/src/components/common/Footer.scss
@@ -30,6 +30,10 @@
             line-height: 140%;
             color: map-get($color-pallete, "neutralWhite");
             font-weight: 400;
+
+            &.onlyMobile {
+                display: none;
+            }
         }
     }
 
@@ -123,13 +127,24 @@
 @media (max-width: 600px) {
     .footer {
         margin-top: 70px;
-        height: 80vh;
+        height: 95vh;
         padding-inline: 16px;
+        padding-bottom: 40px;
         .footerContainer {
             grid-template-columns: none;
             height: 100%;
             grid-template-rows: repeat(3, 1fr);
             row-gap: 40px;
+        }
+        .footerPartOne {
+            p {
+                &.onlyMobile {
+                    display: block;
+                }
+                &.onlyDesktop {
+                    display: none;
+                }
+            }
         }
         .footerPartTwo {
             grid-row: 1/2;
@@ -141,6 +156,9 @@
             grid-column: 1/3;
             ul {
                 flex-direction: row;
+                .mobileHide {
+                    display: none;
+                }
             }
         }
         .footerPartOne {
